fix: resolve diagnostic issues and improve system stability
- Fix TypeScript module resolution for Node.js imports in tests/global-setup.ts
- Add proper HTML test file with accessibility attributes and viewport meta
- Resolve Snyk permission errors by disabling IaC scanning and adding exclusions
- Fix LiteLLM healthcheck using Python urllib instead of unavailable curl
- Configure MCP integration with external DeepWiki server in LiteLLM
- Update VS Code settings to exclude problematic Docker directories
- Add comprehensive scripts for MCP diagnostics and image description testing
- Create workspace configuration for better development experience
- Update .gitignore to exclude Snyk temporary files and improve organization
- Install @types/node dependency for proper TypeScript Node.js support

This commit addresses multiple diagnostic issues that were preventing
smooth development workflow and improves overall system reliability.

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,12 @@ local/
 *.pid
 *.tgz
 conf/backrest/repo-password.txt
+
+# ===================================================================
+# SNYK ВРЕМЕННЫЕ ФАЙЛЫ
+# ===================================================================
+.snyk-report/
+.snyk-cache/
+snyk-*.json
+snyk-*.html
+.snyk.d/
