--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,16 +170,17 @@ jobs:
       - name: 🐹 Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.6"
+          go-version: "1.23.10"
 
       - name: 🔒 Run Gosec Security Scanner
         run: |
           go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
           gosec -fmt sarif -out gosec-results.sarif ./auth/...
+        continue-on-error: true
 
       - name: 📤 Upload Gosec results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        if: always() && hashFiles('gosec-results.sarif') != ''
         with:
           sarif_file: gosec-results.sarif
 
@@ -191,10 +192,11 @@ jobs:
           scan-ref: "."
           format: "sarif"
           output: "trivy-results.sarif"
+        continue-on-error: true
 
       - name: 📤 Upload Trivy results
         uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        if: always() && hashFiles('trivy-results.sarif') != ''
         with:
           sarif_file: "trivy-results.sarif"
 
