--- a/compose.yml
+++ b/compose.yml
@@ -181,7 +181,11 @@ services:
     # Health check для мониторинга состояния (HTTP endpoint проверка)
     # Используем Python urllib вместо curl, так как curl не установлен в контейнере LiteLLM
     healthcheck:
-      test: ["CMD-SHELL", "python3 -c \"import urllib.request; urllib.request.urlopen('http://localhost:4000/health/liveliness', timeout=5).read()\" || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          'python3 -c "import urllib.request; urllib.request.urlopen(''http://localhost:4000/health/liveliness'', timeout=5).read()" || exit 1',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
