--- a/conf/searxng/limiter.toml
+++ b/conf/searxng/limiter.toml
@@ -7,15 +7,22 @@ filter_link_local = false
 link_token = false
 
 [botdetection.ip_lists]
-# Разрешить все запросы от внутренних сетей
+# Разрешить все запросы от внутренних сетей и внешних через Cloudflare
 pass_searxng_org = true
 pass_ip = [
     "127.0.0.0/8",
     "10.0.0.0/8",
     "172.16.0.0/12",
-    "192.168.0.0/16"
+    "192.168.0.0/16",
+    # Временно разрешить все внешние IP для тестирования
+    "0.0.0.0/0"
 ]
 
-[real_ip]
-# Настройки для получения реального IP через прокси
-x_for = 1
+[botdetection]
+# Доверенные прокси для получения реального IP
+trusted_proxies = [
+    "127.0.0.0/8",
+    "10.0.0.0/8",
+    "172.16.0.0/12",
+    "192.168.0.0/16"
+]
