feat: настройка pre-commit hooks для автоматизации проверок качества кода
- Установка pre-commit framework с Python виртуальным окружением
- Конфигурация .pre-commit-config.yaml с комплексными проверками:
  * Prettier форматирование (Markdown, YAML, JSON, JS/TS)
  * ESLint проверки с правилами безопасности
  * Валидация YAML/JSON/TOML файлов
  * Проверка trailing whitespace и end-of-file
  * Detect-secrets для поиска секретов в коде
  * Проверка больших файлов (>500KB)
  * Проверка merge conflicts и case conflicts
  * Go форматирование (gofmt, goimports)
  * Docker Compose валидация

- Исключение чувствительных файлов из проверок:
  * .env* файлы и переменные окружения
  * conf/litellm/config.yaml (API ключи)
  * SSL сертификаты и ключи
  * Данные сервисов и логи

- Интеграция с существующими инструментами:
  * Использование настроек из eslint.config.js
  * Конфигурация Prettier (.prettierrc)
  * Совместимость с Husky и lint-staged

- Обновление package.json с npm скриптами:
  * pre-commit:install - установка hooks
  * pre-commit:run - запуск всех проверок
  * pre-commit:update - обновление hooks

- Создание baseline для detect-secrets
- Обновление .gitignore для Python окружения
- Документация в docs/pre-commit-hooks.md

Компоненты:
- Pre-commit framework: автоматические проверки перед коммитом
- Безопасность: предотвращение попадания секретов в репозиторий
- Качество кода: ESLint, Prettier, форматирование
- CI/CD: предотвращение ошибок в pipeline

--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "commit": "git-cz",
     "release": "semantic-release",
     "precommit": "lint-staged",
-    "postinstall": "npm run prepare"
+    "postinstall": "npm run prepare",
+    "pre-commit:install": "source .venv/bin/activate && pre-commit install && pre-commit install --hook-type commit-msg",
+    "pre-commit:run": "source .venv/bin/activate && pre-commit run --all-files",
+    "pre-commit:update": "source .venv/bin/activate && pre-commit autoupdate"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
