--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,35 @@ yarn-debug.log*
 yarn-error.log*
 
 # ===================================================================
+# PYTHON / ВИРТУАЛЬНЫЕ ОКРУЖЕНИЯ
+# ===================================================================
+.venv/
+venv/
+.env/
+env/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# ===================================================================
 # СБОРКА И АРТЕФАКТЫ
 # ===================================================================
 dist/
@@ -79,6 +108,8 @@ docker-data/
 .vitest/
 .cache/
 cache/
+.pre-commit-cache/
+.secrets.baseline
 
 # ===================================================================
 # IDE И РЕДАКТОРЫ
